--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [behave]
-paths=features/
-      test_app/features/
-
+paths = features/
+        test_app/features/
 [flake8]
-exclude=docs/*
+exclude = docs/*
+[pytest]
+python_files = tests.py
