Add tag @fail_existing_database to tests
Reorder tests, hide skipped output

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,10 @@
 [behave]
 paths = features/
         test_app/features/
+show_skipped = no
+
 [flake8]
 exclude = docs/*
+
 [pytest]
 python_files = tests.py
