--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ python:
   - "3.3"
   - "3.4"
 env:
-  - DJANGO=django==1.4.22
-  - DJANGO=django==1.5.12
-  - DJANGO=django==1.6.11
-  - DJANGO=django==1.7.10
-  - DJANGO=django==1.8.4
+  - DJANGO="Django>=1.4.0,<1.5.0"
+  - DJANGO="Django>=1.5.0,<1.6.0"
+  - DJANGO="Django>=1.6.0,<1.7.0"
+  - DJANGO="Django>=1.7.0,<1.8.0"
+  - DJANGO="Django>=1.8.0,<1.9.0"
 install:
   - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install importlib argparse; fi
   - pip install $DJANGO
@@ -19,10 +19,10 @@ script: python manage.py behave --tags=~@failing && python tests.py
 matrix:
   exclude:
    - python: "2.6"
-     env: DJANGO=django==1.7.10
+     env: DJANGO="Django>=1.7.0,<1.8.0"
    - python: "2.6"
-     env: DJANGO=django==1.8.4
+     env: DJANGO="Django>=1.8.0,<1.9.0"
    - python: "3.3"
-     env: DJANGO=django==1.4.22
+     env: DJANGO="Django>=1.4.0,<1.5.0"
    - python: "3.4"
-     env: DJANGO=django==1.4.22
+     env: DJANGO="Django>=1.4.0,<1.5.0"
