Add docs testenv to tox

--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,9 @@ commands =
     {envpython} tests.py
 
 [testenv:docs]
-basepython=python
-changedir=docs
-deps=sphinx
-commands=
+basepython = python
+changedir = docs
+deps = sphinx
+whitelist_externals = make
+commands =
     make html
