Extract flake8 test to tox

--- a/tox.ini
+++ b/tox.ini
@@ -37,3 +37,9 @@ deps = sphinx
 whitelist_externals = make
 commands =
     make html
+
+[testenv:flake8]
+basepython = python
+deps = flake8
+commands =
+    flake8
