Add flake8 and docs to tox default envlist

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ envlist =
     py{26,27}-django14
     py{26,27,33,34}-django{15,16}
     py{27,33,34}-django{17,18}
+    docs
+    flake8
 
 [testenv]
 basepython =
