enable automated testing on django 1.9

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     py{26,27}-django14
     py{26,27,33,34}-django{15,16}
     py{27,33,34}-django{17,18}
+    py{27,34}-django19
     docs
     flake8
 
@@ -24,6 +25,7 @@ deps =
     django16: Django>=1.6,<1.7
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
+    django19: Django>=1.9,<1.10
     py26: importlib
     py26: argparse
     py{26,27}: mock
