--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,12 @@ env:
   - TOXENV=py34-django16
   - TOXENV=py27-django17
   - TOXENV=py27-django18
+  - TOXENV=py27-django19
   - TOXENV=py33-django17
   - TOXENV=py33-django18
   - TOXENV=py34-django17
   - TOXENV=py34-django18
+  - TOXENV=py34-django19
 install:
   - pip install tox
 script: tox
