--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+python: 3.5
 env:
   - TOXENV=flake8
   - TOXENV=py26-django14
@@ -19,6 +20,7 @@ env:
   - TOXENV=py34-django17
   - TOXENV=py34-django18
   - TOXENV=py34-django19
+  - TOXENV=py35-django19
 install:
   - pip install tox
 script: tox
