--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     py{26,27}-django14
     py{26,27,33,34}-django{15,16}
     py{27,33,34}-django{17,18}
-    py{27,34}-django19
+    py{27,34,35}-django19
     docs
     flake8
 
@@ -18,6 +18,7 @@ basepython =
     py27: python2.7
     py33: python3.3
     py34: python3.4
+    py35: python3.5
 deps =
     pytest
     django14: Django>=1.4,<1.5
