Cover Django 1.10 with our tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     py{26,27}-django14
     py{26,27,33,34}-django{15,16}
     py{27,33,34}-django{17,18}
-    py{27,34,35}-django19
+    py{27,34,35}-django{19,110}
     docs
     flake8
 
@@ -27,6 +27,7 @@ deps =
     django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
+    django110: Django>=1.10,<1.11
     py26: importlib
     py26: argparse
     py{26,27}: mock
