--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ paths = features/
 show_skipped = no
 
 [flake8]
-exclude = docs/*
+exclude = docs,.cache,.tox,*.egg-info
 
 [pytest]
 testpaths = tests/
