--- a/tox.ini
+++ b/tox.ini
@@ -5,35 +5,27 @@
 
 [tox]
 envlist =
-    py{26,27}-django14
-    py{26,27,33,34}-django{15,16}
-    py{27,33,34}-django{17,18}
-    py{27,34,35}-django{19,110}
-    docs
     flake8
+    py{27,33,34}-django18
+    py{27,34,35}-django19
+    py{27,34,35}-django110
+    docs
 
 [testenv]
 basepython =
-    py26: python2.6
     py27: python2.7
     py33: python3.3
     py34: python3.4
     py35: python3.5
 deps =
     pytest
-    django14: Django>=1.4,<1.5
-    django15: Django>=1.5,<1.6
-    django16: Django>=1.6,<1.7
-    django17: Django>=1.7,<1.8
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
-    py26: importlib
-    py26: argparse
-    py{26,27}: mock
+    py27: mock
 commands =
-    {envpython} manage.py behave --tags=~@failing --format=progress
     py.test
+    {envpython} manage.py behave --tags=~@failing --format=progress
 
 [testenv:docs]
 basepython = python
