--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ paths = features/
 show_skipped = no
 
 [flake8]
-exclude = docs,.cache,.tox,*.egg-info
+exclude = docs,.cache,.tox,*.egg-info,.ropeproject
 
-[pytest]
+[tool:pytest]
 testpaths = tests/
