--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:  # $ tox -l | sort | xargs -I _ echo '  - TOXENV=_'
   - TOXENV=py34-django18
   - TOXENV=py34-django19
   - TOXENV=py34-django110
+  - TOXENV=py35-django18
   - TOXENV=py35-django19
   - TOXENV=py35-django110
 install:
