--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ deps =
     py27: mock
 commands =
     py.test
+    {envpython} manage.py behave --simple --tags=~@failing --tags=~@no-simple --format=progress
     {envpython} manage.py behave --tags=~@failing --format=progress
 
 [testenv:docs]
