Rename the confusing tag @no-simple to @requires-live-http

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
     py27: mock
 commands =
     py.test
-    {envpython} manage.py behave --simple --tags=~@failing --tags=~@no-simple --format=progress
+    {envpython} manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
     {envpython} manage.py behave --tags=~@failing --format=progress
 
 [testenv:docs]
