--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,9 @@
 [tox]
 envlist =
     flake8
-    py{27,33,34,35}-django18
-    py{27,34,35}-django19
+    py{27,34,35}-django18
     py{27,34,35}-django110
+    py{27,34,35,36}-django111
     docs
 
 [testenv]
@@ -17,6 +17,7 @@ deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<1.12
     py27: mock
 commands =
     py.test
