--- a/tox.ini
+++ b/tox.ini
@@ -12,11 +12,6 @@ envlist =
     docs
 
 [testenv]
-basepython =
-    py27: python2.7
-    py33: python3.3
-    py34: python3.4
-    py35: python3.5
 deps =
     pytest
     django18: Django>=1.8,<1.9
@@ -41,3 +36,15 @@ basepython = python
 deps = flake8
 commands =
     flake8
+
+[behave]
+paths =
+    features/
+    test_app/features/
+show_skipped = no
+
+[flake8]
+exclude = docs,.cache,.tox,*.egg-info,.ropeproject
+
+[tool:pytest]
+testpaths = tests/
