--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,28 @@
 language: python
-python: 3.6
-env:  # $ tox -l | sort | xargs -I _ echo '  - TOXENV=_'
-  - TOXENV=flake8
-  - TOXENV=py27-django18
-  - TOXENV=py27-django110
-  - TOXENV=py27-django111
-  - TOXENV=py34-django18
-  - TOXENV=py34-django110
-  - TOXENV=py34-django111
-  - TOXENV=py35-django18
-  - TOXENV=py35-django110
-  - TOXENV=py35-django111
-  - TOXENV=py36-django111
-before_install:
-  # work around https://github.com/travis-ci/travis-ci/issues/8363
-  - pyenv global system 3.5
+python:
+  - 2.7
+  - 3.3
+  - 3.4
+  - 3.5
+  - 3.6
+env:
+  - DJANGO=1.8
+  - DJANGO=1.9
+  - DJANGO=1.10
+  - DJANGO=1.11
+matrix:
+  exclude:
+    # Python/Django combinations that aren't officially supported
+    - { python: 3.6, env: DJANGO=1.8 }
+    - { python: 3.3, env: DJANGO=1.9 }
+    - { python: 3.6, env: DJANGO=1.9 }
+    - { python: 3.3, env: DJANGO=1.10 }
+    - { python: 3.6, env: DJANGO=1.10 }
+    - { python: 3.3, env: DJANGO=1.11 }
+  include:
+    - { python: 2.7, env: TOXENV=flake8 }
+
 install:
-  - pip install tox
-script: tox
+  - pip install tox-travis
+script:
+  - tox
