--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@
 [tox]
 envlist =
     flake8
-    py{27,34,35}-django18
+    # Python/Django combinations that are officially supported
+    py{27,33,34,35}-django18
+    py{27,34,35}-django19
     py{27,34,35}-django110
     py{27,34,35,36}-django111
     docs
@@ -17,10 +19,10 @@ deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
-    django111: Django>=1.11,<1.12
+    django111: Django>=1.11,<2.0
     py27: mock
 commands =
-    py.test
+    pytest
     {envpython} manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
     {envpython} manage.py behave --tags=~@failing --format=progress
 
@@ -37,6 +39,13 @@ basepython = python
 deps = flake8
 commands =
     flake8
+
+[travis:env]
+DJANGO =
+    1.8: django18
+    1.9: django19
+    1.10: django110
+    1.11: django111
 
 [behave]
 paths =
