Guard against packaging issue: README rendering (rst->html conversion)

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ envlist =
     py{27,34,35}-django19
     py{27,34,35}-django110
     py{27,34,35,36}-django111
+    readme
     docs
 
 [testenv]
@@ -27,7 +28,6 @@ commands =
     {envpython} manage.py behave --tags=~@failing --format=progress
 
 [testenv:docs]
-basepython = python
 changedir = docs
 deps = sphinx
 whitelist_externals = make
@@ -35,10 +35,13 @@ commands =
     make html
 
 [testenv:flake8]
-basepython = python
 deps = flake8
 commands =
     flake8
+
+[testenv:readme]
+deps = readme_renderer
+commands = python setup.py check --restructuredtext --strict
 
 [travis:env]
 DJANGO =
