--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ matrix:
     - { python: 3.6, env: DJANGO=1.10 }
     - { python: 3.3, env: DJANGO=1.11 }
   include:
-    - { python: 2.7, env: TOXENV=flake8 }
+    - { python: 3.6, env: TOXENV=flake8 }
+    - { python: 3.6, env: TOXENV=readme }
 
 install:
   - pip install tox-travis
