Make simple sections more compact (tox.ini)

--- a/tox.ini
+++ b/tox.ini
@@ -31,13 +31,11 @@ commands =
 changedir = docs
 deps = sphinx
 whitelist_externals = make
-commands =
-    make html
+commands = make html
 
 [testenv:flake8]
 deps = flake8
-commands =
-    flake8
+commands = flake8
 
 [testenv:readme]
 deps = readme_renderer
