--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ envlist =
     py{27,34,35}-django19
     py{27,34,35}-django110
     py{27,34,35,36}-django111
+    py{34,35,36}-django20
     readme
     docs
 
@@ -21,6 +22,7 @@ deps =
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
     py27: mock
 commands =
     pytest
@@ -47,6 +49,7 @@ DJANGO =
     1.9: django19
     1.10: django110
     1.11: django111
+    2.0: django20
 
 [behave]
 paths =
