--- a/tox.ini
+++ b/tox.ini
@@ -17,13 +17,14 @@ envlist =
 
 [testenv]
 deps =
-    pytest
+    py{27,34,35,36}: pytest
+    py33: pytest<3.3.0
+    py27: mock
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
-    py27: mock
 commands =
     pytest
     {envpython} manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
