--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,24 @@
 language: python
 python:
   - 2.7
-  - 3.3
   - 3.4
   - 3.5
   - 3.6
+  - 3.7
 env:
-  - DJANGO=1.8
-  - DJANGO=1.9
-  - DJANGO=1.10
   - DJANGO=1.11
   - DJANGO=2.0
+  - DJANGO=2.1
 matrix:
   exclude:
     # Python/Django combinations that aren't officially supported
-    - { python: 3.6, env: DJANGO=1.8 }
-    - { python: 3.3, env: DJANGO=1.9 }
-    - { python: 3.6, env: DJANGO=1.9 }
-    - { python: 3.3, env: DJANGO=1.10 }
-    - { python: 3.6, env: DJANGO=1.10 }
-    - { python: 3.3, env: DJANGO=1.11 }
-    - { python: 2.7, env: DJANGO=2.0 }
-    - { python: 3.3, env: DJANGO=2.0 }
+    - { env: DJANGO=1.10, python: 3.7 }
+    - { env: DJANGO=2.0, python: 2.7 }
+    - { env: DJANGO=2.1, python: 2.7 }
+    - { env: DJANGO=2.1, python: 3.4 }
   include:
-    - { python: 3.6, env: TOXENV=flake8 }
-    - { python: 3.6, env: TOXENV=readme }
+    - { env: TOXENV=flake8, python: 3.7 }
+    - { env: TOXENV=readme, python: 3.7 }
 
 install:
   - pip install tox-travis
