--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,23 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
+# Tox (http://tox.testrun.org/) - run tests in multiple virtualenvs.
+# Also contains configuration settings for all tools executed by Tox.
 
 [tox]
 envlist =
     flake8
     # Python/Django combinations that are officially supported
-    py{27,33,34,35}-django18
-    py{27,34,35}-django19
-    py{27,34,35}-django110
     py{27,34,35,36}-django111
-    py{34,35,36}-django20
+    py{34,35,36,37}-django20
+    py{35,36,37}-django21
     readme
     docs
 
 [testenv]
 deps =
-    py{27,34,35,36}: pytest
-    py33: pytest<3.3.0
     py27: mock
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
+    pytest
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
 commands =
     pytest
     {envpython} manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
@@ -46,11 +39,9 @@ commands = python setup.py check --restructuredtext --strict
 
 [travis:env]
 DJANGO =
-    1.8: django18
-    1.9: django19
-    1.10: django110
     1.11: django111
     2.0: django20
+    2.1: django21
 
 [behave]
 paths =
