Move features/ and unit tests to tests/ folder

--- a/tox.ini
+++ b/tox.ini
@@ -20,14 +20,14 @@ deps =
     django21: Django>=2.1,<2.2
 commands =
     pytest
-    {envpython} manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
-    {envpython} manage.py behave --tags=~@failing --format=progress
+    {envpython} tests/manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
+    {envpython} tests/manage.py behave --tags=~@failing --format=progress
 
 [testenv:docs]
-changedir = docs
 deps = sphinx
-whitelist_externals = make
+changedir = docs
 commands = make html
+whitelist_externals = make
 
 [testenv:flake8]
 deps = flake8
@@ -35,7 +35,7 @@ commands = flake8
 
 [testenv:readme]
 deps = readme_renderer
-commands = python setup.py check --restructuredtext --strict
+commands = {envpython} setup.py check --restructuredtext --strict
 
 [travis:env]
 DJANGO =
@@ -44,13 +44,12 @@ DJANGO =
     2.1: django21
 
 [behave]
-paths =
-    features/
-    test_app/features/
+paths = tests/acceptance
+        tests/test_app
 show_skipped = no
 
 [flake8]
 exclude = docs,.cache,.tox,*.egg-info,.ropeproject
 
 [tool:pytest]
-testpaths = tests/
+testpaths = tests/unit
