Run a test sample against behave's master branch

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,7 @@ envlist =
     py{27,34,35,36}-django111
     py{34,35,36,37}-django20
     py{35,36,37}-django21
+    behave-latest
     readme
     docs
 
@@ -18,6 +19,7 @@ deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    latest: git+https://github.com/behave/behave.git#egg=behave
 commands =
     pytest
     {envpython} tests/manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
