--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
 - DJANGO=2.1
 
 matrix:
+  allow_failures:
+  - env: TOXENV=behave-latest
   exclude:
   # Python/Django combinations that aren't officially supported
   - { env: DJANGO=1.11, python: 3.7 }
@@ -35,3 +37,4 @@ jobs:
   include:
   - { stage: lint, python: 3.7, env: TOXENV=flake8 }
   - { stage: lint, python: 3.7, env: TOXENV=readme }
+  - { stage: test, python: 3.7, env: TOXENV=behave-latest }
