Add PyCQA security linter to CI setup

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     py{34,35,36,37}-django20
     py{35,36,37}-django21
     behave-latest
+    bandit
     readme
     docs
 
@@ -24,6 +25,10 @@ commands =
     pytest
     {envpython} tests/manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
     {envpython} tests/manage.py behave --tags=~@failing --format=progress
+
+[testenv:bandit]
+deps = bandit
+commands = bandit .
 
 [testenv:docs]
 deps = sphinx
