--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ stages:
 jobs:
   include:
   - { stage: lint, python: 3.7, env: TOXENV=flake8 }
+  - { stage: lint, python: 3.7, env: TOXENV=bandit }
   - { stage: lint, python: 3.7, env: TOXENV=readme }
   - { stage: test, python: 3.7, env: TOXENV=behave-latest }
   - stage: deploy
