Replace assert by if+raise in production code
Fix PyCQA security linter invocation

Use twine for checking README validity

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
 
 [testenv:bandit]
 deps = bandit
-commands = bandit .
+commands = bandit -r --ini tox.ini
 
 [testenv:docs]
 deps = sphinx
@@ -41,14 +41,20 @@ deps = flake8
 commands = flake8
 
 [testenv:readme]
-deps = readme_renderer
-commands = {envpython} setup.py check --restructuredtext --strict
+deps = twine
+commands =
+    {envpython} setup.py sdist bdist_wheel
+    twine check dist/*
 
 [travis:env]
 DJANGO =
     1.11: django111
     2.0: django20
     2.1: django21
+
+[bandit]
+targets = behave_django
+exclude = .git,.idea,.tox,build,dist,docs,tests
 
 [behave]
 paths = tests/acceptance
