--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
 
 [testenv:bandit]
 deps = bandit
-commands = bandit -r --ini tox.ini
+commands = bandit --ini tox.ini
 
 [testenv:docs]
 deps = sphinx
@@ -53,8 +53,9 @@ DJANGO =
     2.1: django21
 
 [bandit]
-targets = behave_django
 exclude = .git,.idea,.tox,build,dist,docs,tests
+recursive = true
+targets = behave_django
 
 [behave]
 paths = tests/acceptance
