Bandit requires the -r option
See https://github.com/PyCQA/bandit/issues/396

--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ commands =
 
 [testenv:bandit]
 deps = bandit
-commands = bandit --ini tox.ini
+commands = bandit -r --ini tox.ini
 
 [testenv:docs]
 deps = sphinx
@@ -54,8 +54,7 @@ DJANGO =
 
 [bandit]
 exclude = .git,.idea,.tox,build,dist,docs,tests
-recursive = true
-targets = behave_django
+targets = .
 
 [behave]
 paths = tests/acceptance
