--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ envlist =
     # Python/Django combinations that are officially supported
     py{27,34,35,36}-django111
     py{34,35,36,37}-django20
-    py{35,36,37}-django21
+    py{35,36,37}-django{21,22}
     behave-latest
     bandit
     readme
@@ -20,6 +20,8 @@ deps =
     django111: Django>=1.11,<2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
+    latest: Django
     latest: git+https://github.com/behave/behave.git#egg=behave
 commands =
     pytest
@@ -51,6 +53,7 @@ DJANGO =
     1.11: django111
     2.0: django20
     2.1: django21
+    2.2: django22
 
 [bandit]
 exclude = .git,.idea,.tox,build,dist,docs,tests
