Update contributing docs, remove dev requirements
Add clean target to Tox configuration

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ envlist =
     bandit
     readme
     docs
+    clean
 
 [testenv]
 deps =
@@ -29,6 +30,15 @@ commands =
 [testenv:bandit]
 deps = bandit
 commands = bandit -r --ini tox.ini
+
+[testenv:clean]
+commands =
+    rm -rf .tox/ behave_django.egg-info/ build/ dist/ docs/_build/
+    find {toxinidir} -type f -name '*.pyc' -delete
+    find {toxinidir} -type d -name '__pycache__' -delete
+whitelist_externals =
+    find
+    rm
 
 [testenv:docs]
 deps = sphinx
