Modernize test setup (Tox, Travis, drop Python 2.7)

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,9 @@
 envlist =
     flake8
     # Python/Django combinations that are officially supported
-    py{27,34,35,36}-django111
-    py{35,36,37}-django{21,22}
+    py{34,35,36,37}-django111
+    py{35,36,37,38}-django22
+    py{36,37,38}-django30
     behave-latest
     bandit
     readme
@@ -14,12 +15,12 @@ envlist =
     clean
 
 [testenv]
+description = Unit tests
 deps =
-    py27: mock
     pytest
     django111: Django>=1.11,<2.0
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<3.0
+    django30: Django>=3.0,<3.1
     latest: Django
     latest: git+https://github.com/behave/behave.git#egg=behave
 commands =
@@ -28,10 +29,12 @@ commands =
     {envpython} tests/manage.py behave --tags=~@failing --format=progress
 
 [testenv:bandit]
-deps = bandit
+description = PyCQA security linter
+deps = bandit<1.6
 commands = bandit -r --ini tox.ini
 
 [testenv:clean]
+description = Remove Python bytecode and other debris
 commands =
     rm -rf .tox/ behave_django.egg-info/ build/ dist/ docs/_build/
     find {toxinidir} -type f -name '*.pyc' -delete
@@ -41,16 +44,19 @@ whitelist_externals =
     rm
 
 [testenv:docs]
+description = Build package documentation (HTML)
 deps = sphinx
 changedir = docs
 commands = make html
 whitelist_externals = make
 
 [testenv:flake8]
+description = Static code analysis and code style
 deps = flake8
 commands = flake8
 
 [testenv:readme]
+description = Ensure README renders on PyPI
 deps = twine
 commands =
     {envpython} setup.py sdist bdist_wheel
@@ -59,8 +65,8 @@ commands =
 [travis:env]
 DJANGO =
     1.11: django111
-    2.1: django21
     2.2: django22
+    3.0: django30
 
 [bandit]
 exclude = .git,.idea,.tox,build,dist,docs,tests
