--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ var/
 .installed.cfg
 *.egg
 
+# We only want Pipfile for easy development
+Pipfile.lock
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -48,7 +51,7 @@ nosetests.xml
 *.mo
 *.pot
 
-# Django stuff:
+# Django stuff
 *.log
 *.sqlite3
 
