Replace deprecated multi_db option by databases
The multi_db attribute is deprecated since Django 2.2, hence we replace it by the new databases option.
See https://docs.djangoproject.com/en/3.0/topics/testing/tools/#django.test.TransactionTestCase.multi_db

This entails that we also drop support for Django 1.11 and Python 3.4.

Closes #104

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,6 @@
 envlist =
     flake8
     # Python/Django combinations that are officially supported
-    py{34,35,36,37}-django111
     py{35,36,37,38}-django22
     py{36,37,38}-django30
     behave-latest
@@ -18,15 +17,14 @@ envlist =
 description = Unit tests
 deps =
     pytest
-    django111: Django>=1.11,<2.0
     django22: Django>=2.2,<3.0
     django30: Django>=3.0,<3.1
     latest: Django
     latest: git+https://github.com/behave/behave.git#egg=behave
 commands =
     pytest
-    {envpython} tests/manage.py behave --simple --tags=~@failing --tags=~@requires-live-http --format=progress
-    {envpython} tests/manage.py behave --tags=~@failing --format=progress
+    {envpython} tests/manage.py behave --simple --tags=~@failing --tags=~@requires-live-http {posargs:--format=progress}
+    {envpython} tests/manage.py behave --tags=~@failing {posargs:--format=progress}
 
 [testenv:bandit]
 description = PyCQA security linter
@@ -64,7 +62,6 @@ commands =
 
 [travis:env]
 DJANGO =
-    1.11: django111
     2.2: django22
     3.0: django30
 
