--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     # Python/Django combinations that are officially supported
     py{35,36,37,38}-django22
     py{36,37,38}-django30
+    py{36,37,38}-django31
     behave-latest
     bandit
     readme
@@ -19,6 +20,7 @@ deps =
     pytest
     django22: Django>=2.2,<3.0
     django30: Django>=3.0,<3.1
+    django31: Django>=3.1,<3.2
     latest: Django
     latest: git+https://github.com/behave/behave.git#egg=behave
 commands =
@@ -33,12 +35,11 @@ commands = bandit -r --ini tox.ini
 
 [testenv:clean]
 description = Remove Python bytecode and other debris
+deps = pyclean
 commands =
+    pyclean -v {toxinidir}
     rm -rf .tox/ behave_django.egg-info/ build/ dist/ docs/_build/
-    find {toxinidir} -type f -name '*.pyc' -delete
-    find {toxinidir} -type d -name '__pycache__' -delete
 whitelist_externals =
-    find
     rm
 
 [testenv:docs]
@@ -64,6 +65,7 @@ commands =
 DJANGO =
     2.2: django22
     3.0: django30
+    3.1: django31
 
 [bandit]
 exclude = .git,.idea,.tox,build,dist,docs,tests
